--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,7 @@
     "mp-weixin" : {
         /* 小程序特有相关 */
         "usingComponents" : true,
-        "appid" : "",
+        "appid" : "wx97313541a3c8990e",
         "setting" : {
             "urlCheck" : true,
             "postcss" : false,
