--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "axios": "^0.21.1",
     "qs": "^6.10.1",
     "vue-axios": "^3.2.5"
+  },
+  "devDependencies": {
+    "@types/qs": "^6.9.7"
   }
 }
